--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
     
+    <div>This website is awesome</div>
+    <div>Some random information.</div>
+    <div>Call to action! It's time!</div>
+    <div class="footer">Copyright</div>
 </body>
 </html>
