changed picture style

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="secondary_text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</div>
             <button class="sign_up">Sign Up</button>
           </div>
-          <img src="aircraft.png" alt="placeholder for image" style="width:300px;height:150px;">
+          <img src="aircraft.png" alt="placeholder for image" style="max-width:50%;max-height: max-content;">
       </div>
       
       
