--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
       
       <div class="middle">
         <div>Some random information.</div>
-        <div>Row of pictures and text</div>
+        <img class="square" src="square.png" alt="first square" style="max-width:50px;max-height:50px;">
+        <div>this is some subtext under an illustration or image</div>
+        <img class="square" src="square.png" alt="first square" style="max-width:50px;max-height:50px;">
+        <div>this is some subtext under an illustration or image</div>
+        <img class="square" src="square.png" alt="first square" style="max-width:50px;max-height:50px;">
+        <div>this is some subtext under an illustration or image</div>
+        <img class="square" src="square.png" alt="first square" style="max-width:50px;max-height:50px;">
+        <div>this is some subtext under an illustration or image</div>
+
         <div class="quote">This is an inspiring quote, or a testimonial from a 
             customer. Maybe it's just filling up space, or maybe people will 
             actually read it. Who knows? All I know is that it looks nice.
@@ -41,7 +49,7 @@
         <button>Sign up</button>
       </div>
       
-      <div class="footer">Copyright</div>
+      <div class="footer">Copyright &copy; The Odin Project 2021</div>
     </div>
 </body>
 </html>
